some simple style/spacing fixes

--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -3,8 +3,20 @@
     height: 15vmin;
 }
 
+.zoom {
+    transition: transform .2s;
+}
+
+.zoom:hover {
+    transform: scale(1.5);
+}
+
+.skills-row {
+    margin-bottom: 3vmin;
+}
+
 .skills-title {
-    margin-bottom: 5vmin;
+    margin-bottom: 4vmin;
 }
 
 .skills-subheading {
